# datacake

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  rustfmt.toml
.github/workflows/: lint.yml  rust.yml
__pycache__/: demo_primes.is_prime-4.py310.1.nbc  demo_primes.is_prime-4.py310.nbi  demo_primes.is_prime-5.py310.1.nbc  demo_primes.is_prime-5.py310.nbi  demo_primes.sieve_python_jit-5.py310.1.nbc  demo_primes.sieve_python_jit-5.py310.nbi
benchmarks/: Cargo.toml  README.md
benchmarks/src/: main.rs
benchmarks/src/replication/: datacake_memory.rs  mod.rs  raft_memory.rs
benchmarks/src/stores/: memstore.rs  mod.rs
datacake-cluster/: Cargo.toml  DESIGN.md  README.md  build.rs
datacake-cluster/proto/: chitchat.proto  cluster_rpc.proto  datacake.proto
datacake-cluster/src/: clock.rs  core.rs  data_handler.rs  error.rs  keyspace.rs  lib.rs  manager.rs  node.rs  nodes_selector.rs  poller.rs  shared.rs  statistics.rs  storage.rs  tasks.rs  test_utils.rs  wrappers.rs
datacake-cluster/src/keyspace/: actor.rs  group.rs  messages.rs  mod.rs
datacake-cluster/src/replication/: distributor.rs  mod.rs  poller.rs
datacake-cluster/src/rpc/: chitchat_transport.rs  chitchat_transport_api.rs  client.rs  client_cluster.rs  cluster_rpc_models.rs  datacake_api.rs  mod.rs  network.rs  server.rs
datacake-cluster/src/rpc/server/: chitchat_impl.rs  consistency_impl.rs  mod.rs  replication_impl.rs
datacake-cluster/src/rpc/services/: consistency_impl.rs  replication_impl.rs
datacake-cluster/src/shard/: actor.rs  base.rs  group.rs  mod.rs  state.rs
datacake-cluster/src/test_utils/: memstore.rs  mod.rs
datacake-cluster/tests/: basic_connect.rs  dynamic_membership.rs  multi_node_cluster.rs  multiple_keyspace.rs  node_connections.rs  node_disconnects.rs  single_node_cluster.rs  state_add.rs  state_remove.rs  stress_cluster.rs  tests.rs  tombestones.rs
datacake-cluster/tests/utils/: memorystore.rs  mod.rs
datacake-crdt/: Cargo.toml  README.md
datacake-crdt/src/: lib.rs  orswot.rs  timestamp.rs
datacake-data/: Cargo.toml
datacake-data/src/: block.rs  blocking.rs  cache.rs  lib.rs  segment_footer.rs  value.rs
datacake-eventual-consistency/: Cargo.toml  README.md
datacake-eventual-consistency/src/: core.rs  error.rs  lib.rs  storage.rs  test_utils.rs
datacake-eventual-consistency/src/keyspace/: actor.rs  group.rs  messages.rs  mod.rs
datacake-eventual-consistency/src/replication/: distributor.rs  mod.rs  poller.rs
datacake-eventual-consistency/src/rpc/: client.rs
datacake-eventual-consistency/src/rpc/services/: consistency_impl.rs  mod.rs  replication_impl.rs
datacake-eventual-consistency/tests/: basic_connect.rs  dynamic_membership.rs  multi_node_cluster.rs  multiple_keyspace.rs  single_node_cluster.rs
datacake-lmdb/: Cargo.toml  README.md
datacake-lmdb/src/: db.rs  lib.rs
datacake-lmdb/tests/: basic_cluster.rs
datacake-multi-raft/: Cargo.toml
datacake-multi-raft/src/: lib.rs  membership.rs
datacake-node/: Cargo.toml  README.md  build.rs
datacake-node/proto/: datacake.proto
datacake-node/src/: clock.rs  error.rs  extension.rs  lib.rs  node.rs  nodes_selector.rs  statistics.rs
datacake-node/src/rpc/: chitchat_transport.rs  datacake_api.rs  mod.rs  network.rs
datacake-node/src/rpc/server/: chitchat_impl.rs  mod.rs
datacake-node/src/rpc/services/: chitchat_impl.rs  mod.rs
datacake-node/tests/: membership.rs
datacake-rocks/: Cargo.toml  README.md
datacake-rocks/src/: error.rs  lib.rs  metastore.rs  shard.rs
datacake-rpc/: Cargo.toml  README.md
datacake-rpc/bench/: Cargo.toml  build.rs
datacake-rpc/bench/proto/: echo.proto
datacake-rpc/bench/src/: main.rs
datacake-rpc/src/: body.rs  client.rs  handler.rs  lib.rs  request.rs  server.rs  utils.rs  view.rs
datacake-rpc/src/certs/: cert.pem  key.pem
datacake-rpc/src/net/: client.rs  limits.rs  mod.rs  server.rs  simulation.rs  status.rs  tls.rs  utils.rs
datacake-rpc/src/rkyv_tooling/: mod.rs  scratch.rs  view.rs
datacake-rpc/tests/: basic.rs  many_messages.rs  many_services.rs  passing_headers.rs  service_error.rs  stream.rs  unknown_service.rs
datacake-segment/: Cargo.toml
datacake-segment/src/: error.rs  lib.rs  merger.rs  reader.rs  removal.rs  shared.rs  test_utils.rs  writer.rs
datacake-shard/: Cargo.toml
datacake-shard/src/: commit_log.rs  error.rs  lib.rs  store.rs
datacake-sqlite/: Cargo.toml  README.md
datacake-sqlite/src/: db.rs  from_row_impl.rs  lib.rs
datacake-sqlite/tests/: basic_cluster.rs
examples/: README.md
examples/replicated-fs/: Cargo.toml  README.md
examples/replicated-fs/src/: main.rs  storage.rs
examples/replicated-kv/: Cargo.toml  README.md
examples/replicated-kv/scripts/: store-many-docs.py
examples/replicated-kv/src/: main.rs  storage.rs
examples/sled-cluster/: Cargo.toml  README.md
examples/sled-cluster/src/: main.rs
hourglass-data/: Cargo.toml
hourglass-data/src/: block.rs  blocking.rs  cache.rs  lib.rs  segment_footer.rs  segment_header.rs  value.rs
hourglass-segment/: Cargo.toml
hourglass-segment/src/: error.rs  lib.rs  merger.rs  reader.rs  segment.rs  test_utils.rs  writer.rs
hourglass-shard/: Cargo.toml
hourglass-shard/src/: error.rs  shard.rs  store.rs
simulation-tests/: Cargo.toml
simulation-tests/tests/: rpc.rs
src/: lib.rs  main.rs
test-helper/: Cargo.toml
test-helper/src/: addr.rs  lib.rs
