[package]
name = "datacake"
version = "0.4.0"
edition = "2021"
description = "A batteries included framework for building fault-tolerance distributed data systems."
license = "MIT"
keywords = ["crdt", "databases", "distributed", "tokio", "async"]
categories = ["concurrency", "data-structures", "asynchronous"]
repository = "https://github.com/lnx-search/datacake"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datacake-crdt = { version = "0.3", path = "datacake-crdt", optional = true }
datacake-cluster = { version = "0.1", path = "datacake-cluster", optional = true }
datacake-sqlite = { version = "0.1", path = "datacake-sqlite", optional = true }
datacake-rpc = { version = "0.2", path = "datacake-rpc", optional = true }
datacake-node = { version = "0.1", path = "datacake-node", optional = true }

[features]
test-utils = ["datacake-cluster/test-utils"]
rkyv = ["datacake-crdt/rkyv-support"]
default = [
    "datacake-crdt",
    "datacake-rpc",
    "datacake-cluster",
    "datacake-sqlite",
    "datacake-node",
]

[workspace]
members = [
    "datacake-node",
    "datacake-cluster",
    "datacake-crdt",
    "datacake-sqlite",
    "datacake-rpc",

    # Example set
    "examples/replicated-kv",
]