[package]
name = "datacake"
version = "0.8.0"
edition = "2021"
description = "A batteries included framework for building fault-tolerance distributed data systems."
license = "MIT"
keywords = ["crdt", "databases", "distributed", "tokio", "async"]
categories = ["concurrency", "data-structures", "asynchronous"]
repository = "https://github.com/lnx-search/datacake"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datacake-crdt = { version = "0.5", path = "datacake-crdt", optional = true }
datacake-eventual-consistency = { version = "0.6", path = "datacake-eventual-consistency", optional = true }
datacake-sqlite = { version = "0.5", path = "datacake-sqlite", optional = true }
datacake-rpc = { version = "0.6", path = "datacake-rpc", optional = true }
datacake-node = { version = "0.5", path = "datacake-node", optional = true }
datacake-lmdb = { version = "0.3", path = "datacake-lmdb", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt"] }
anyhow = "1"

[features]
test-utils = ["datacake-eventual-consistency/test-utils"]
rkyv = ["datacake-crdt/rkyv-support"]
simulation = ["datacake-rpc/simulation"]
default = [
    "datacake-crdt",
    "datacake-rpc",
    "datacake-eventual-consistency",
    "datacake-node",
]

[workspace]
members = [
    "datacake-node",
    "datacake-eventual-consistency",
    "datacake-crdt",
    "datacake-sqlite",
    "datacake-rpc",
    "datacake-lmdb",

    # Utils
    "test-helper",
    "benchmarks",
    "simulation-tests",

    # Example set
    "examples/replicated-kv",
]