[package]
name = "datacake-cluster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chitchat = "0.4.1"
tracing = "0.1.36"
tonic = "0.8.0"
tokio-stream = "0.1.9"
flume = "0.10.14"
prost = "0.11.0"
futures = "0.3.23"
itertools = "0.10.3"
arc-swap = "1.5.1"
bytes = "1.2.1"
thiserror = "1"
parking_lot = "0.12.1"
crc32fast = "1.3.2"
lz4_flex = "0.9.5"

tokio = { version = "1", default-features = false, features = ["sync", "time"] }
rkyv = { version = "0.7.9", features = ["bytecheck"] }
bytecheck = "0.6.9"

datacake-crdt = { path = "../datacake-crdt", features = ["rkyv"] }

anyhow = { version = "1", optional = true }

[features]
test-utils = ["anyhow"]
memory-compression = []

[dev-dependencies]
anyhow = "1"
tracing-subscriber = "0.3.15"

[build-dependencies]
tonic-build = "0.8.0"
prost-build = "0.11.1"

