[package]
name = "datacake-cluster"
version = "0.1.0"
edition = "2021"
description = "Eventually consistent state replication as a library (consensus, RPC and conflict resolution) for building your own eventually consistent databases."
license = "MIT"
keywords = ["crdt", "databases", "distributed", "tokio", "async"]
categories = ["concurrency", "data-structures", "asynchronous"]
repository = "https://github.com/lnx-search/datacake"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.36"
tonic = "0.8.0"
tokio-stream = "0.1.9"
flume = "0.10.14"
prost = "0.11.0"
futures = "0.3.23"
itertools = "0.10.3"
bytes = "1.2.1"
thiserror = "1"
parking_lot = "0.12.1"
crc32fast = "1.3.2"
async-trait = "0.1.58"
anyhow = "1"
rand = "0.8.5"
bytecheck = "0.6.9"

chitchat = { git = "https://github.com/quickwit-oss/chitchat.git", branch = "chillfish8-add-better-error-handling" }
tokio = { version = "1", default-features = false, features = ["sync", "time"] }
rkyv = { version = "0.7.9", features = ["validation"] }

datacake-crdt = { path = "../datacake-crdt", version = "0.3", features = ["rkyv-support"] }

[features]
test-utils = []

[dev-dependencies]
anyhow = "1"
tracing-subscriber = "0.3.15"
bytes = "1.2.1"

[build-dependencies]
tonic-build = "0.8.0"
prost-build = "0.11.1"

