[package]
name = "datacake-crdt"
version = "0.4.1"
edition = "2021"
description = "A conflict free replicated datatype based on a hybrid logical clock implementation for building eventually consistent data stores."
license = "MIT"
keywords = ["crdt", "databases", "distributed"]
categories = ["concurrency", "data-structures"]
repository = "https://github.com/lnx-search/datacake"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.33"

rkyv = { version = "0.7.42", features = ["validation"], optional = true }

[features]
# Enables (de)serialization support for all data types.
rkyv-support = ["rkyv"]