[package]
name = "datacake-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
flume = "0.10.14"
async-trait = "0.1.59"
tracing = "0.1"
tokio-stream = "0.1.9"
parking_lot = "0.12.1"
rand = "0.8.5"
futures = "0.3"
crc32fast = "1.3.2"
bytecheck = "0.6.9"

datacake-rpc = { version = "0.2", path = "../datacake-rpc" }
datacake-crdt = { version = "0.4", path = "../datacake-crdt", features = ["rkyv-support"] }
chitchat = { version = "0.5.1", package  = "datacake-chitchat-fork" }
tokio = { version = "1", default-features = false, features = ["sync", "time"] }
rkyv = { version = "0.7.39", features = ["validation"] }

[dev-dependencies]
tracing-subscriber = "0.3.16"
tokio = { version = "1", features = ["full"] }
datacake-rpc = { version = "0.2", path = "../datacake-rpc", features = ["test-utils"] }

