[package]
name = "datacake-rocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.10"
async-trait = "0.1.57"
thiserror = "1"
tracing = "0.1.36"
futures = "0.3.24"

rkyv = { version = "0.7.39", features = ["validation"] }
tokio = { version = "1", features = ["rt"] }

rocksdb = { version = "0.19.0", features = ["lz4"] }
moka = { version = "0.9", optional = true }

datacake-cluster = { path = "../datacake-cluster" }

[features]
cache = ["moka"]