[package]
name = "datacake-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecheck = "0.6.9"
anyhow = "1"
async-trait = "0.1.60"
thiserror = "1"
parking_lot = "0.12.1"
rcgen = "0.10.0"
tracing = "0.1.37"

s2n-quic-core = { version = "0.15.0" }
s2n-quic = { version = "1.14.0", default-features = false, features = ["provider-address-token-default", "provider-tls-rustls"] }
rustls = { version = "0.20", features = ["dangerous_configuration"] }
rkyv = { version = "0.7.39", features = ["validation"] }
tokio = { version = "1", default-features = false, features = ["rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

