[package]
name = "datacake-rpc"
version = "0.5.1"
edition = "2021"
description = "A zero-copy, actor-like RPC framework using rkyv."
license = "MIT"
keywords = ["tokio", "rpc", "zero-copy"]
categories = ["concurrency", "asyncronous"]
repository = "https://github.com/lnx-search/datacake"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.8"
bytes = "1.3.0"
anyhow = "1"
async-trait = "0.1.60"
thiserror = "1"
parking_lot = "0.12.1"
tracing = "0.1.37"

hyper = { version = "0.14.23", features = ["full"] }
rkyv = { version = "0.7.42", features = ["strict", "validation"] }
tokio = { version = "1", default-features = false, features = ["rt"] }

# Used for simulation
turmoil = { version = "0.4.0", optional = true }
async-stream = { version = "0.3.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
test-helper = { path = "../test-helper" }

[features]
test-utils = []

# Enable turmoil simulation for testing.
simulation = ["turmoil", "async-stream"]

