[package]
name = "datacake-sqlite"
version = "0.5.0"
edition = "2021"
description = "A pre-built implementation of datacake's Storage trait using SQLite."
license = "MIT"
keywords = ["databases", "distributed"]
categories = ["concurrency", "data-structures"]
repository = "https://github.com/lnx-search/datacake"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1.59"
futures = "0.3.25"
flume = "0.10.14"
rusqlite = "0.28.0"
thiserror = "1"

tokio = { version = "1", default-features = false, features = ["rt"] }

datacake-crdt = { version = "0.4", path = "../datacake-crdt" }
datacake-eventual-consistency = { version = "0.5", path = "../datacake-eventual-consistency" }

[features]
bundled = ["rusqlite/bundled"]
default = ["bundled"]

[dev-dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

test-helper = { path = "../test-helper" }
uuid = { version = "1", features = ["v4"] }
datacake-node = { version = "0.4", path = "../datacake-node" }
datacake-eventual-consistency = { version = "0.5", path = "../datacake-eventual-consistency", features = ["test-utils"] }