[package]
name = "hourglass-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3.11"
lz4_flex = "0.9.3"
anyhow = "1"
bytecheck = "0.6.8"
rayon = "1.5.3"
futures = "0.3.21"
itoa = "1.0"
ryu = "1.0"
moka = "0.8.5"
uuid = "1.1.2"
tracing = "0.1.35"
humansize = "1.1.1"

rkyv = { version = "0.7.38", features = ["alloc", "validation"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
rand = "0.8.5"