[package]
name = "hourglass-segment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hourglass-data = { path = "../hourglass-data" }

futures-lite = "1.12.0"
thiserror = "1.0.31"
glommio = "0.7.0"

[dev-dependencies]
rand = "0.8.5"