[package]
name = "hourglass-shard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hourglass-data = { path = "../hourglass-data" }
hourglass-segment = { path = "../hourglass-segment" }

tracing = "0.1.35"
uuid = "1.1.2"
humansize = "1.1.1"
thiserror = "1.0.31"