[package]
name = "simulation-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
turmoil = "0.4.0"
bytecheck = "0.6.9"

datacake = { version = "0.7.0", path = "..", features = ["simulation", "test-utils"] }
tokio = { version = "1", features = ["full"] }
rkyv = { version = "0.7.39", features = ["validation"] }
