[package]
name = "bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecheck = "0.6.9"
anyhow = "1"
tonic = "0.8.3"
prost = "0.11"

tokio = { version = "1", features = ["full"] }
rkyv = { version = "0.7.39", features = ["validation"] }

datacake-rpc = { path = "../../datacake-rpc" }

[build-dependencies]
anyhow = "1"
tonic-build = { version = "0.8.4", features = ["prost"] }