[package]
name = "replicated-fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
notify = "5.0.0"
crc32fast = "1.3.2"
futures = "0.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
thiserror = "1.0.37"
axum = "0.6.1"
dashmap = "5.4.0"
tempfile = "3.3.0"

reqwest = { version = "0.11.13", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
datacake = { version = "0.1", path = "../.." }