[package]
name = "sled-cluster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.7"
anyhow = "1"
async-trait = "0.1.57"
tracing-subscriber = "0.3.15"

rkyv = { version = "0.7.39", features = ["validation"] }
tokio = { version = "1", features = ["full"] }

datacake-cluster = { path = "../../datacake-cluster" }